metadata-classic/objects/LiveText__SMS_Text__c.object
<CustomObject>
    <description>SMS Text</description>
    <fields>
        <fullName>CreatedDateTime__c</fullName>
        <formula>CreatedDate</formula>
        <label>Created Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LiveText__Conversation_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Conversation Header</label>
        <referenceTo>LiveText__Conversation_Header__c</referenceTo>
        <relationshipLabel>SMS Texts (Conversation Header)</relationshipLabel>
        <relationshipName>SMS_Text</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LiveText__End_Chat_Message__c</fullName>
        <formula>LiveText__Support_Number__r.LiveText__Chat_End_Message__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Chat Message</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiveText__Error_Code__c</fullName>
        <description>Message delivery error code</description>
        <label>Error Code</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LiveText__Error_Sub_Code__c</fullName>
        <label>Error Sub Code</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LiveText__External_Message_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Message Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiveText__First_Name__c</fullName>
        <description>Stores the first name of the person messaging in.</description>
        <label>First_Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiveText__Formatted_Originating_Number__c</fullName>
        <formula>IF(AND(ISBLANK(LiveText__First_Name__c), ISBLANK(LiveText__Last_Name__c)),LiveText__Originating_Number__c,LiveText__First_Name__c + &apos; &apos; + LiveText__Last_Name__c)</formula>
        <label>Formatted Originating Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiveText__Group_Id__c</fullName>
        <description>The group identifier for the chat specified by the business, such as a department name.</description>
        <label>Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiveText__Initial_Message__c</fullName>
        <formula>LiveText__Support_Number__r.LiveText__Initial_Message__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initial Message</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiveText__Intent_Id__c</fullName>
        <description>The intent of the chat, specified by the business.</description>
        <label>Intent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiveText__Is_Form_Response__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies a message as a form response</description>
        <label>Is Form Response?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LiveText__Last_Name__c</fullName>
        <description>Stores the last name of the person messaging in.</description>
        <label>Last_Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiveText__Message__c</fullName>
        <label>Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LiveText__OriginTimestamp__c</fullName>
        <description>Time the message was composed by the client.</description>
        <label>OriginTimestamp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LiveText__Originating_Number__c</fullName>
        <description>Originating Number</description>
        <label>Originating Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiveText__Sent_To_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent to Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LiveText__Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>LiveText</fullName>
                    <default>true</default>
                    <label>LiveText</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LiveText__Status__c</fullName>
        <description>Status of message delivery</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LiveText__Support_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Support Number</label>
        <referenceTo>LiveText__LiveText_Number__c</referenceTo>
        <relationshipLabel>SMS Texts (Support Number)</relationshipLabel>
        <relationshipName>SMS_Text</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LiveText__Thumbnail_Photo_Url__c</fullName>
        <description>Stores the Url of the thumb profile pic of the person messaging in.</description>
        <label>Thumbnail_Photo_Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>LiveText__Time_Zone__c</fullName>
        <description>Stores the timezone of the person texting in.</description>
        <label>Time_Zone</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LiveText__Unique_SMS__c</fullName>
        <label>Unique SMS</label>
        <length>225</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>SMS Text</label>
    <listViews>
        <fullName>LiveText__All</fullName>
        <columns>NAME</columns>
        <columns>LiveText__Conversation_Header__c</columns>
        <columns>LiveText__Originating_Number__c</columns>
        <columns>LiveText__Source__c</columns>
        <columns>LiveText__Initial_Message__c</columns>
        <columns>LiveText__Message__c</columns>
        <columns>LiveText__Sent_To_Customer__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>CreatedDateTime__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>SMSTextsLast30Days</fullName>
        <columns>NAME</columns>
        <columns>CreatedDateTime__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>LiveText__Originating_Number__c</columns>
        <columns>LiveText__Sent_To_Customer__c</columns>
        <columns>LiveText__Conversation_Header__c</columns>
        <columns>LiveText__End_Chat_Message__c</columns>
        <columns>LiveText__Formatted_Originating_Number__c</columns>
        <columns>LiveText__Initial_Message__c</columns>
        <columns>LiveText__Message__c</columns>
        <columns>LiveText__Source__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>SMS Texts - Last 30 Days</label>
        <sharedTo>
            <roleAndSubordinatesInternal>CustomerSuccessOrganization</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SMSTextsToday</fullName>
        <columns>NAME</columns>
        <columns>CreatedDateTime__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>LiveText__Originating_Number__c</columns>
        <columns>LiveText__Message__c</columns>
        <columns>LiveText__Sent_To_Customer__c</columns>
        <columns>LiveText__Conversation_Header__c</columns>
        <columns>LiveText__End_Chat_Message__c</columns>
        <columns>LiveText__Formatted_Originating_Number__c</columns>
        <columns>LiveText__Initial_Message__c</columns>
        <columns>LiveText__Source__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>SMS Texts - Today</label>
        <sharedTo>
            <roleAndSubordinatesInternal>CustomerSuccessOrganization</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>SMS-{0000}</displayFormat>
        <label>SMS Text Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SMS Texts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>